Fixed addressComponent spacing. Language. Header. Paragraph. React key warning.

--- a/src/react-apps/applications/runtime/src/styles/AddressComponent.css
+++ b/src/react-apps/applications/runtime/src/styles/AddressComponent.css
@@ -31,8 +31,8 @@
 
 .address-component-label {
   font-weight: 500;
-  padding-top: 1.5rem;
-  padding-bottom: 1rem;
+  padding-top: 2.4rem;
+  padding-bottom: 1.2rem;
 }
 
 .address-component-label-smaller {
